Bug fix:  It looked bad in a wide window.
I was only testing in a very narrow window.
Because I was running the chrome debugger on the right.
Normal full screen on my laptop would make it look bad.

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ svg {
   border-style: solid;
   border-width: 0.25em;
   border-color: saddlebrown;
+  max-height: 90vh;
 }
 line {
   stroke-width: 0.05;
